force-app/main/default/objects/Contact/fields/Finleap_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Finleap_Contact_Type__c</fullName>
    <label>Finleap Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>