force-app/main/default/objects/Contact/fields/FinreachContactID__c.field-meta.xml
<CustomField>
    <fullName>FinreachContactID__c</fullName>
    <description>Migration ID from Finreach Salesforce</description>
    <inlineHelpText>Migration ID from Finreach Salesforce</inlineHelpText>
    <label>FinreachContactID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>