force-app/main/default/objects/Contact/fields/InfinitecContactID__c.field-meta.xml
<CustomField>
    <fullName>InfinitecContactID__c</fullName>
    <description>Infinitec Migration ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Infinitec Migration ID</inlineHelpText>
    <label>InfinitecContactID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>