force-app/main/default/objects/Contact/fields/LinkedIn_Search__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Search__c</fullName>
    <description>Link to Google Search within LinkedIn</description>
    <formula>HYPERLINK( &#39;https://www.google.com/search?q=site%3Alinkedin.com%2Fin%2F+AND+&quot;&#39; &amp; FirstName &amp; &#39;+&#39; &amp; MiddleName &amp; &#39;+&#39; &amp; LastName &amp; &#39;&quot;+AND+&quot;&#39; &amp; Account.Name &amp; &#39;&quot;&#39;, &#39;Probable Results Link&#39;,&quot;_blank&quot;)</formula>
    <inlineHelpText>Link to Google Search within LinkedIn</inlineHelpText>
    <label>LinkedIn Search</label>
    <type>Text</type>
</CustomField>