force-app/main/default/objects/Contact/recordTypes/Finleap_Invesment_Contact.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Invesment_Contact</fullName>
    <active>true</active>
    <description>Finleap Invesment Contact</description>
    <label>Finleap Invesment Contact</label>
</RecordType>