force-app/main/default/objects/Contact/recordTypes/Standard_Contact.recordType-meta.xml
<RecordType>
    <fullName>Standard_Contact</fullName>
    <active>true</active>
    <description>Standard Contact Record Type</description>
    <label>Standard Contact</label>
</RecordType>