force-app/main/default/objects/Contact/validationRules/Make_Fields_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Fields_Mandatory</fullName>
    <active>true</active>
    <description>Make fields like Email mandatory</description>
    <errorConditionFormula>AND(
ISBLANK(Email),
NOT(CONTAINS($Label.Users_Exclusion,$User.Username))
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please enter an Email address before saving.</errorMessage>
</ValidationRule>